fixed logo spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,6 +74,7 @@ img {
 
   .logo {
     padding-left: 10px;
+    width: auto;
   }
 }
 
